--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,11 @@ dependencies = [
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
     "pyyaml>=6.0.2",
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
+    "google-api-python-client>=2.176.0",
+    "google-auth>=2.40.3",
+    "google-auth-oauthlib>=1.2.2",
+    "mcp>=1.11.0",
 ]
 
 
