--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "google-auth>=2.40.3",
     "google-auth-oauthlib>=1.2.2",
     "mcp>=1.11.0",
+    "gramine-ratls>=0.0.6",
 ]
 
 
